# gateway-6ch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean  configure  repl  repl.c  run
inc/: FreeRTOSConfig.h  binary.h  bus.h  config.h  cpu_usage.h  crc.h  debug.h  defs.h  dmx.h  esp.h  host.h  led.h  macrologger.h  messages.h  modbus.h  modbus_framer.h  modbus_parser.h  protocol.h  res_usage.h  ring_buffer.h  uart.h  utils.h
src/: bus.c  cpu_usage.c  crc.c  dmx.c  esp.c  host.c  led.c  main.c  messages.c  min_port.c  modbus.c  res_usage.c  ring_buffer.c  uart.c  uart_defs.c
src/pio/: dmx.pio  uart_rx.pio  uart_tx.pio
support/: min.py  modbus-rtu-server.py  modbus-server.py
